--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
