--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@web3modal/ethers": "^5.1.11",
+    "ethers": "^6.13.4",
+    "express": "^4.21.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "xrpl": "^4.1.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
