--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@web3modal/ethers": "^5.1.11",
     "ethers": "^6.13.4",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
+    "motion": "^11.15.0",
     "multer": "^1.4.5-lts.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
